// Copyright 2021 The Cockroach Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
package cacheroach.auth;
import "capabilities.proto";
import "session.proto";
import "token.proto";
option go_package = "github.com/bobvawter/cacheroach/api/auth";

message LoginRequest {
  string handle = 1;
  string password = 2;
}

message LoginResponse {
  session.Session session = 1;
  token.Token token = 2;
}

service Auth {
  // Login is a public method.
  rpc Login (LoginRequest) returns (LoginResponse) {
    option (capabilities.method_rule).auth_status = PUBLIC;
  }
}